# chem_mat_data

./: .DEVELOP.rst.swp  .README.rst.swp  .gitignore  .mcp.json  .zenodo.json  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CRYSTAL_UPDATE.md  DEVELOP.rst  HISTORY.rst  LICENSE  MANAGE.rst  PAPER_IDEA.md  README.rst  TMC_DATASETS.md  TMC_DATASETS_NEW.md  _test.csv  datasets.json  graph_format.rst  index.html  mkdocs.yml  noxfile.py  pyproject.toml  release.sh  requirements.txt  ruff.toml  tox.ini  tox.toml
.github/workflows/: docs.yml
_test_/: README_QM9.md  opencode.json  parse_qm9_to_csv.py  prompt.md
api_datasets/: index.html
api_streaming_datasets/: index.html
architecture_decisions/001_providing_processed_datasets/: index.html
architecture_decisions/002_custom_graph_represention/: index.html
architecture_decisions/003_local_dataset_cache/: index.html
architecture_decisions/004_streaming_datasets/: index.html
chem_mat_data/: .cli.py.swp  .env  .graph.py.swp  .utils.py.swp  __init__.py  _typing.py  cache.py  cli.py  config.py  connectors.py  data.py  dataset.py  datasets.py  graph.py  main.py  manage.py  metadata.yml  pipeline.py  processing.py  testing.py  tmc.py  tmc_processing.py  utils.py  visualization.py  web.py
chem_mat_data/examples/: 00_quickstart.ipynb  00_quickstart.py  01_gnn_demo.ipynb
chem_mat_data/scripts/: create_graph_datasets.py  create_graph_datasets___from_xyz.py  create_graph_datasets__ames.py  create_graph_datasets__aqsoldb.py  create_graph_datasets__bace.py  create_graph_datasets__bace_cls.py  create_graph_datasets__bace_reg.py  create_graph_datasets__bbbp.py  create_graph_datasets__beet.py  create_graph_datasets__bl_chembl_cls.py  create_graph_datasets__bl_chembl_reg.py  create_graph_datasets__clintox.py  create_graph_datasets__compas_1x.py  create_graph_datasets__compas_2x.py  create_graph_datasets__compas_3x.py  create_graph_datasets__dpp4.py  create_graph_datasets__dud_e.py  create_graph_datasets__elanos_bp.py  create_graph_datasets__elanos_vp.py  create_graph_datasets__electrum_coord.py  create_graph_datasets__electrum_oxstate.py  create_graph_datasets__esol.py  create_graph_datasets__freesolv.py  create_graph_datasets__from_tu.py  create_graph_datasets__from_tu__MCF_7.py  create_graph_datasets__from_tu__MOLT_4.py  create_graph_datasets__from_tu__OVCAR_8.py  create_graph_datasets__from_tu__PC_3.py  create_graph_datasets__from_xyz.py  create_graph_datasets__from_xyz__qm9.py  create_graph_datasets__half_life.py  create_graph_datasets__hiv.py  create_graph_datasets__hopv15_exp.py  create_graph_datasets__kulik_spin.py  create_graph_datasets__lipophilicity.py  create_graph_datasets__muv.py  create_graph_datasets__open_melting_point.py  create_graph_datasets__photo_oliogomers.py  create_graph_datasets__price_small.py  create_graph_datasets__qm9.py  (+22 more)
chem_mat_data/scripts/assets/: aqsoldb.csv
chem_mat_data/scripts/assets/_test2.xyz_bundle/: 1.xyz  meta.csv
chem_mat_data/scripts/results/create_graph_datasets/debug/: analysis.py  experiment_code.py  experiment_meta.json
chem_mat_data/scripts/results/create_graph_datasets__bace/debug/: analysis.py  create_graph_datasets.py  experiment_code.py  experiment_meta.json
chem_mat_data/templates/: config.toml.j2  docs_dataset.md.j2  logo.txt  logo_image.txt  logo_text.txt
cli_cache/: index.html
cli_config/: index.html
cli_download/: index.html
cli_info/: index.html
cli_list/: index.html
cli_quickstart/: index.html
custom_pre_processing/: index.html
datasets/: index.html
docs/: 404.html  api_datasets.md  cli_cache.md  cli_config.md  cli_download.md  cli_info.md  cli_list.md  custom_pre_processing.md  datasets.md  first_steps.md  graph_representation.md  index.html  index.md  installation.md  processing_graphs.md  sitemap.xml
docs/adrs/: 001_providing_processed_datasets.md
docs/api_datasets/: index.html
docs/api_streaming_datasets/: index.html
docs/architecture_decisions/: 002_custom_graph_represention.md  003_local_dataset_cache.md  004_lazy_dataset_objects.md  006_transition_metal_complex_support.md  007_dataset_category_and_version_compatibility.md
docs/architecture_decisions/001_providing_processed_datasets/: index.html
docs/architecture_decisions/002_custom_graph_represention/: index.html
docs/architecture_decisions/003_local_dataset_cache/: index.html
docs/architecture_decisions/004_streaming_datasets/: index.html
docs/architecture_decisions/005_automated_processing_agent/: index.html
docs/architecture_decisions/006_transition_metal_complex_support/: index.html
docs/architecture_decisions/007_dataset_category_and_version_compatibility/: index.html
docs/cli_cache/: index.html
docs/cli_config/: index.html
docs/cli_download/: index.html
docs/cli_info/: index.html
docs/cli_list/: index.html
docs/cli_quickstart/: index.html
docs/custom_pre_processing/: index.html
docs/datasets/: index.html
docs/first_steps/: index.html
docs/graph_representation/: index.html
docs/installation/: index.html
docs/processing_graphs/: index.html
docs/search/: search_index.json
first_steps/: index.html
graph_representation/: index.html
installation/: index.html
pages/: datasets.json  index.html
processing_graphs/: index.html
scripts/: graph.py
search/: search_index.json
site/: 404.html  index.html
site/installation/: index.html
site/search/: search_index.json
tests/: _temp.py  test_cache.py  test_cli.py  test_config.py  test_connectors.py  test_data.py  test_datasets.py  test_docs.py  test_hopv15_figshare.py  test_init.py  test_main.py  test_main_bridges.py  test_processing.py  test_testing.py  test_tmc_processing.py  test_util.py  test_web.py  test_xyz_dataset.py  utils.py
tests/artifacts/: README.rst
tests/assets/: README.rst  _test.mpack  _test.xyz
